# ghidra-skink

./: .gitignore  README.md  logging.yml  poc.py  pyproject.toml  requirements-tests.txt  requirements.txt
data/: class-example.sarif.json
generator/architecture/classes/: __init__.py  cls.py
generator/architecture/export/: context.py
generator/architecture/functions/: function.py
generator/architecture/namespaces/: namespace.py
generator/sarif/: __init__.py
skink/: __init__.py  __main__.py  logger.py  logging.yml  main.py
skink/architecture/: utils.py
skink/architecture/classes/: cls.py  collect.py
skink/architecture/common/: Field.py  exclusion.py  includes.py  sanitization.py  singleton.py
skink/architecture/defineddata/: __init__.py
skink/architecture/enums/: __init__.py
skink/architecture/export/: context.py  location.py  style.py  types.py
skink/architecture/functions/: function.py
skink/architecture/functionsignatures/: __init__.py
skink/architecture/namespaces/: collect.py  namespace.py
skink/architecture/structs/: struct.py
skink/architecture/typedefs/: __init__.py
skink/architecture/unions/: union.py
skink/cli/: args.py  create.py  export.py  main.py  preprocess.py  sarif.py  settings.py
skink/export/: context.py  location.py  types.py
skink/export/classes/: collect.py
skink/sarif/: BasicResult.py  Run.py  TypeInfo.py  UnusedResult.py  __init__.py  decode_results.py  message.py
skink/utils/: OrderedSet.py
tests/: conftest.py
tests/data/: example1.sarif.json  namespace-example.sarif.json  struct-example.sarif.json
(+112 files in other folders)
